--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 services:
   rabbitmq:
     # image: pivotalrabbitmq/rabbitmq:v3.12.0-beta.1-otp-max-bazel
-    image: rabbitmq:3-management
+    # image: rabbitmq:3-management
+    image: ${RABBITMQ_IMAGE}
     ports:
       # HOST:CONTAINER
       - 15672:15672
